--- a/app1/templates/base.html
+++ b/app1/templates/base.html
@@ -52,40 +52,45 @@
 
 
   <nav class="navbar navbar-expand-md" style="background-color: #36858A;">
+
     <a class="navbar-brand" href="/"><img src="{% static '/img/logo4.png' %}" alt="" width="60px"> </a>
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+
       <span class="navbar-toggler-icon"></span>
+
     </button>
+
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
 
-      <div>
+      
         <ul class="navbar-nav float-right">
 
-          {% if user.is_authenticated %}
-          <li class="nav-item">
+          {% if user.is_thenticated %}
+          <li class="nav-itauem">
             <a class="nav-link" href="/logout_view"> Cerrar Sesion</a>
           </li>
-<div class="dropdown">
-              <button class="btn dropdown-toggle" type="button" data-toggle="dropdown"
-                style="background-color: #51bdba;">Carrito
-                <span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu" style="color:black; width: 500px;">
-                <li> </li>
-                {% for x in request.session.carrito %}
-                <li>
-                  <div class="card">
-                    <div class="card-header">{{x.cantidad}} unidades de {{x.nombre}}</div>
-                  </div>
-                </li>
+          <div class="dropdown">
+            <button class="btn dropdown-toggle" type="button" data-toggle="dropdown"
+              style="background-color: #51bdba;">Carrito
+              <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" style="color:black; width: 500px;">
+              
+              {% for x in request.session.carrito %}
+              <li>
+                <div class="card">
+                  <div class="card-header">{{x.cantidad}} unidades de {{x.nombre}}</div>
+                </div>
+              </li>
 
 
-                {% endfor %}
+              {% endfor %}
 
 
 
-              </ul>
-            </div>
+            
+          
           {% else %}
           <li class="nav-item">
             <a class="nav-link" href="/login_view">Iniciar Sesion</a>
@@ -94,12 +99,12 @@
 
           <li>
 
-            
+          </ul>
 
-      </div>
+      
   </nav>
 
-  <div class="container-fluid main my-2 ">
+  <div class="container-fluid main  ">
 
     {% block contenido %}
     {% endblock %}
