--- a/app1/templates/finalizar_pedido_staff.html
+++ b/app1/templates/finalizar_pedido_staff.html
@@ -5,7 +5,11 @@
 <div class="row justify-content-center m-4" style="background-color: rgba(255,255,255,1);">
     
     <div class="col-sm-8">
-<div class="card">
+
+    <button class="btn btn-warning"><a href="/tomar_pedido_staff/">VOLVER A LOS PRODUCTOS</a></button>
+
+    
+        <div class="card">
 <div class="card-header" style="background-color: #00D879; color: white;">
 
     FINALIZAR PEDIDO
