--- a/app1/templates/perfil_cliente.html
+++ b/app1/templates/perfil_cliente.html
@@ -1,89 +1,100 @@
 {% extends 'base.html' %} {% block contenido %} {% load static%}
-<div class="row justify-content-center p-2">
+<div class="row justify-content-center">
 
-<div class="col-sm-3" >  
-  
+  <div class="col-sm-3 col-md-4 col-lg-4 ">
 
+    <table class="table">
 
-  <table class="table" >
-    <thead style="background-color: #00D879;color:white; text-shadow: 2px 2px 10px rgba(0,0,0,0.5);">
+      <thead style="background-color: #00D879;color:white; text-shadow: 2px 2px 10px rgba(0,0,0,0.5);">
 
-      <tr>
-        <td>
-          DATOS 
-        </td>
- <td>
-          EMPLEADO 
-        </td>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>
-         Email
-        </td>
-        <td>
-          {{user.email}}
-        </td>
-      </tr>
         <tr>
-        <td>
-         Username
-        </td>
-        <td>
-          {{user.username}}
-        </td>
-      </tr>
+          <td>
+            DATOS
+          </td>
+          <td>
+            EMPLEADO
+          </td>
+        </tr>
+      </thead>
+
+      <tbody>
+
         <tr>
-        <td>
-         Nombre 
-        </td>
-        <td>
-          {{user.first_name}} 
-      </tr>
+          <td>
+            Email
+          </td>
+          <td>
+            {{user.email}}
+          </td>
+        </tr>
 
-      <tr>
-        <td>
-         Apellido
-        </td>
-        <td>
-         {{user.last_name}}
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-<div class="col-sm-8" >
-  <div class="p-3 justify-content-center">
+        <tr>
+          <td>
+            Username
+          </td>
+          <td>
+            {{user.username}}
+          </td>
+        </tr>
 
-    
-  <button class="btn btn-warning"><a href="/tomar_pedido_cliente/">TOMAR PEDIDO</a></button>
-   </div>
+        <tr>
+          <td>
+            Nombre
+          </td>
+          <td>
+            {{user.first_name}}
+        </tr>
 
-  <table class="table">
-    <thead >
-      <tr>
-        <th>ID</th>
-        <th>FECHA</th>
-        <th>DIRECCION</th>
-        <th>COMUNA</th>
-        <th>ESTADO</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for x in lista %}
-      <tr>
-        <td><button class="btn btn-danger"><a href="/pedido_e/{{x.id}}">{{x.id}}</a></button> </td>
-        <td> {{x.fecha}}</td>
-        <td> {{x.calle_entrega}}</td>
-        <td> {{x.comuna}}</td>
-        <td> {{x.estado}}</td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
+        <tr>
+          <td>
+            Apellido
+          </td>
+          <td>
+            {{user.last_name}}
+          </td>
+        </tr>
+      </tbody>
+    </table>
+
+  </div>
+
+  <div class=" col-sm-3 col-md-6 col-sm-6" style="border:2px solid red">
+
+    <button class="btn btn-warning"><a href="/tomar_pedido_cliente/">TOMAR PEDIDO</a></button>
+
+    <table class="table">
+      <thead>
+
+        <tr>
+          <th>ID</th>
+          <th>FECHA</th>
+          <th>DIRECCION</th>
+          <th>COMUNA</th>
+          <th>ESTADO</th>
+        </tr>
+
+      </thead>
+
+      <tbody>
+
+        {% for x in lista %}
+
+        <tr>
+          <td><button class="btn btn-danger"><a href="/pedido/{{x.id}}">{{x.id}}</a></button> </td>
+          <td> {{x.fecha}}</td>
+          <td> {{x.calle_entrega}}</td>
+          <td> {{x.comuna}}</td>
+          <td> {{x.estado}}</td>
+        </tr>
+
+        {% endfor %}
+
+      </tbody>
+
+    </table>
+
+  </div>
+
 </div>
-</div>
-</div>
-</div>
+
 {% endblock %}
