--- a/app1/templates/perfil_empleado.html
+++ b/app1/templates/perfil_empleado.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block contenido %} {% load static%}
 <div class="row justify-content-center ">
 
-  <div class="" style="border:2px solid red;">
+  <div class="" >
 
 
 
@@ -53,7 +53,7 @@
       </tbody>
     </table>
   </div>
-  <div class="" style="border:2px solid red;">
+  <div class="" >
 
 
 
