--- a/app1/templates/tomar_pedido_staff.html
+++ b/app1/templates/tomar_pedido_staff.html
@@ -8,7 +8,7 @@
 <div class="row justify-content-center cont-card">
     {% for x in lista %}
 
-    <div class="col-sm-3 m-1">
+    <div class="col-sm-12 col-md-6  col-lg-3 m-1">
 
         <div class="card " style="box-shadow: 2px 2px 10px rgba(0,0,0,0.3);">
 
