--- a/app1/templates/base.html
+++ b/app1/templates/base.html
@@ -107,10 +107,13 @@
     {% block contenido %}
     {% endblock %}
   </div>
-  <footer class="footer">
+  <footer class="footer justify-content-center text-center">
+    <div>  </div>
     <div class="container-fluid">
       <p>&copy; 2023 comprarte.com. Todos los derechos reservados.</p>
+
     </div>
+    
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
