--- a/app1/templates/perfil_cliente.html
+++ b/app1/templates/perfil_cliente.html
@@ -2,6 +2,7 @@
 <div class="row justify-content-center">
 
   <div class="col-sm-3 col-md-4 col-lg-4 ">
+<button class="btn btn-warning my-2"><a href="/editar_perfil/">EDITAR PERFIL</a></button>
 
     <table class="table">
 
@@ -58,9 +59,9 @@
 
   </div>
 
-  <div class=" col-sm-3 col-md-6 col-sm-6" style="border:2px solid red">
+  <div class=" col-sm-3 col-md-6 col-sm-6" >
 
-    <button class="btn btn-warning"><a href="/tomar_pedido_cliente/">TOMAR PEDIDO</a></button>
+    <button class="btn btn-warning my-1 "><a href="/tomar_pedido_cliente/">TOMAR PEDIDO</a></button>
 
     <table class="table">
       <thead>
