--- a/app1/templates/registro_producto.html
+++ b/app1/templates/registro_producto.html
@@ -13,10 +13,14 @@
 
         <form method="POST" enctype="multipart/form-data">
           {% csrf_token %}
-          <input type="file" name="archivo">
-          <input type="text" name="nombre">
-          <input type="text" name="descripcion">
-          <input type="number" name="precio">
+          <label for="">ARCHIVO</label><br>
+          <input type="file" name="archivo"><br>
+          <label for="">NOMBRE</label><br>
+          <input type="text" name="nombre"><br>
+          <label for="">DESCRIPCION</label><br>
+          <input type="text" name="descripcion"><br>
+          <label for="">PRECIO</label><br>
+          <input type="number" name="precio"><br>
           
           
           <hr>
