--- a/app1/templates/base.html
+++ b/app1/templates/base.html
@@ -7,7 +7,7 @@
   <title>Comparte</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 
@@ -16,6 +16,8 @@
 
     * {
       font-family: 'Poppins', sans-serif;
+      margin: 0;
+      padding: 0;
     }
 
     a {
@@ -30,6 +32,7 @@
 
     .main {
       min-height: 700px;
+ 
     }
 
     footer {
@@ -44,63 +47,110 @@
 
 
     }
+
+    /* Estilos para el menú izquierdo (ul con id "izquierda") */
+    #izquierda {
+      width: 50%;
+      display: flex;
+      justify-content: flex-start;
+      /* Alinea los elementos al inicio (izquierda) */
+    }
+
+    /* Estilos para el menú derecho (ul con id "derecha") */
+    #derecha {
+      width: 50%;
+
+      display: flex;
+      justify-content: flex-end;
+      /* Alinea los elementos al final (derecha) */
+    }
+
+    .verde{
+      color: white;
+      background-color: #00D879;
+    }
+    .navbar-dark{color:white} 
   </style>
 
 </head>
 
 <body>
 
-
-  <nav class="navbar navbar-expand-md" style="background-color: #36858A;">
+  <nav class="navbar navbar-expand-md verde ">
 
     <a class="navbar-brand" href="/"><img src="{% static '/img/logo4.png' %}" alt="" width="60px"> </a>
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-
-      <span class="navbar-toggler-icon"></span>
-
+    <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" style="">
+      <span class="navbar-toggler-icon navbar-dark"></span>
     </button>
+
 
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
 
+      <ul class="navbar-nav  me-auto" id="izquierda">
 
-      <ul class="navbar-nav " >
+        <li class="nav-item">
+          <a class="nav-link" href="/catalogo/">Catalogo</a>
+        </li>
+
+      </ul>
+
+
+      <ul class="navbar-nav" id="derecha">
 
         {% if user.is_authenticated %}
-        <li class="nav-itauem">
+
+       
+
+        <li class="nav-item">
+
+          <div class="dropdown">
+
+            <button class="btn dropdown-toggle m-1" type="button" data-toggle="dropdown" style="background-color: #51bdba;">
+             <a href=""> <i class="fa-solid fa-cart-shopping"></i></a>
+              <span class="caret"></span>
+
+            </button>
+
+            <ul class="dropdown-menu" style="color:black; width: 500px;">
+
+              {% for x in request.session.carrito %}
+
+              <li>
+                <div class="card">
+                  <div class="card-header">{{x.cantidad}} unidades de {{x.nombre}} </div>
+                </div>
+              </li>
+
+              {% endfor %}
+
+            </ul>
+
+          </div>
+        </li>
+        <li>
+        <a class="nav-link btn btn-warning" href="" >  {{user}}</a> 
+        </li>  
+        <li class="nav-item">
           <a class="nav-link" href="/logout_view"> Cerrar Sesion</a>
         </li>
 
-        <div class="dropdown">
-        
-          <button class="btn dropdown-toggle" type="button" data-toggle="dropdown"
-            style="background-color: #51bdba;">Carrito
-            <span class="caret"></span>
-          </button>
-        
-          <ul class="dropdown-menu" style="color:black; width: 500px;">
+        {% else %}
 
-            {% for x in request.session.carrito %}
-            <li>
-              <div class="card">
-                <div class="card-header">{{x.cantidad}} unidades de {{x.nombre}}</div>
-              </div>
-            </li>
-     
-          
-            {% endfor %}
+        <li class="nav-item">
 
-          </ul>
+          <a class="nav-link" href="/login_view/"> Iniciar Sesion</a>
 
-                 {% else %}
+        </li>
 
-            <a class="nav-link" href="/login_view/"> Iniciar Sesion</a>
-            
- {% endif %}
-      </div>
+
+        {% endif %}
+
       </ul>
+
     </div>
   </nav>
+
 
   <div class="container-fluid main  ">
 
@@ -108,12 +158,12 @@
     {% endblock %}
   </div>
   <footer class="footer justify-content-center text-center">
-    <div>  </div>
+    <div> </div>
     <div class="container-fluid">
       <p>&copy; 2023 comprarte.com. Todos los derechos reservados.</p>
 
     </div>
-    
+
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
