--- a/app1/templates/perfil_cliente.html
+++ b/app1/templates/perfil_cliente.html
@@ -3,7 +3,7 @@
 
   <div class="col-sm-3 col-md-4 col-lg-4 ">
 <button class="btn btn-warning my-2"><a href="/editar_perfil/">EDITAR PERFIL</a></button>
-
+<img src="" alt="">
     <table class="table">
 
       <thead style="background-color: #00D879;color:white; text-shadow: 2px 2px 10px rgba(0,0,0,0.5);">
