--- a/app1/templates/perfil_empleado.html
+++ b/app1/templates/perfil_empleado.html
@@ -1,22 +1,26 @@
 {% extends 'base.html' %} {% block contenido %} {% load static%}
-<div class="row justify-content-center ">
+<div class="row justify-content-center " >
 
-  <div class="" >
+  <div class="col-sm-12 col-md-12 col-lg-4 m-1 p-2" >
+
+    <h2> <i class="fa-solid fa-user"></i> Bienvenido Empleado</h2>
 
 
 
-    <table class="table">
-      <thead style="background-color: #00D879;color:white; text-shadow: 2px 2px 10px rgba(0,0,0,0.5);">
+    <table class="table"  >
+      <thead class="verde">
 
         <tr>
           <td>
-            DATOS
+           DATOS
           </td>
           <td>
             EMPLEADO
           </td>
         </tr>
+
       </thead>
+
       <tbody>
         <tr>
           <td>
@@ -26,6 +30,7 @@
             {{user.email}}
           </td>
         </tr>
+
         <tr>
           <td>
             Username
@@ -34,12 +39,14 @@
             {{user.username}}
           </td>
         </tr>
+
         <tr>
           <td>
             Nombre
           </td>
           <td>
             {{user.first_name}}
+
         </tr>
 
         <tr>
@@ -52,42 +59,54 @@
         </tr>
       </tbody>
     </table>
-  </div>
-  <div class="" >
+    <div>
+      <table>
 
-
-
-      <a href="/tomar_pedido_staff/"><button class="btn btn-warning m-1">TOMAR PEDIDO</button></a>
-      <a href="/registro_producto/"><button class="btn btn-warning">REGISTRAR PRODUCTO</button></a>
-     <a href="/productos/"> <button class="btn btn-warning">LISTA PRODUCTO</button></a>
-
-
-
-
-      <table class="table">
         <thead>
           <tr>
-            <th>ID</th>
-            <th>FECHA</th>
-            <th>DIRECCION</th>
-            <th>COMUNA</th>
-            <th>ESTADO</th>
-          </tr>
+             </tr>
         </thead>
-        <tbody>
-          {% for x in lista %}
-          <tr>
-            <td><button class="btn btn-danger"><a href="/pedido_e/{{x.id}}">{{x.id}}</a></button> </td>
-            <td> {{x.fecha}}</td>
-            <td> {{x.calle_entrega}}</td>
-            <td> {{x.comuna}}</td>
-            <td> {{x.estado}}</td>
-          </tr>
-          {% endfor %}
-        </tbody>
       </table>
+
+      <ul>
+       
+
+       
+      </ul>
     </div>
   </div>
+
+  <div class="col-sm-12 col-md-12 col-lg-6 m-1 caja p-2" >
+    <h2> <i class="fa-solid fa-bars"></i> Lista Pedidos</h2>
+   <a href="/tomar_pedido_staff/"><button class="btn verde m-1">TOMAR PEDIDO</button></a>
+   <a href="/registro_producto/"><button class="btn verde  m-1">REGISTRAR PRODUCTO</button></a>
+   <a href="/productos/"> <button class="btn verde  m-1">LISTA PRODUCTO</button></a>
+       
+    <table class="table">
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>FECHA</th>
+          <th>DIRECCION</th>
+          <th>COMUNA</th>
+          <th>ESTADO</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for x in lista %}
+        <tr>
+          <td><button class="btn btn-danger"><a href="/pedido_e/{{x.id}}">{{x.id}}</a></button> </td>
+          <td> {{x.fecha}}</td>
+          <td> {{x.calle_entrega}}</td>
+          <td> {{x.comuna}}</td>
+          <td> {{x.estado}}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+
+</div>
 
 
 {% endblock %}
