--- a/app1/templates/tomar_pedido_staff.html
+++ b/app1/templates/tomar_pedido_staff.html
@@ -26,8 +26,8 @@
                 <div>
                     <form action="/ag_pro_staff/" method="POST">
                         {% csrf_token %}
-                        <input class="form-control" type="number" class="" name="cantidad_id" >
-                        <input type="hidden" class="" name="producto_id" style="width: 100px;" value="{{x.id}}">
+                        <input class="form-control" type="number" class="" name="cantidad_id"  min="1">
+                        <input type="hidden" class="" name="producto_id" style="width: 100px;" value="{{x.id}}" >
                         <input type="submit" value="AGREGAR" class="btn mt-1" style="border:none; background-color: #00D879;color:white">
                     </form>
                 </div>
